# DroneDelivery

./: .gitmodules  CONVENTIONS.md  README.md
.github/ISSUE_TEMPLATE/: Standard-Issue-Template.md  Weekly-Scrum-Template.md  scrum-template.md  standard-issue-template.md
.github/ISSUE_TEMPLATES/: standard_issue_template.md
.github/PULL_REQUEST_TEMPLATE/: pull-request-template.md
docs/: .gitignore  CONVENTIONS.md  LICENSE.md  README.md  TUTORIAL.md  TUTURIAL_FLIGHT_ARENA.md
drone_controller/: CMakeLists.txt  package.xml
drone_controller/launch/: PathController.launch  PositionController_2_drones.launch  PositionController_bar_turn_and_move.launch  PositionController_move.launch  PositionController_turn.launch  PositionController_turn_and_move.launch  PositionController_turn_and_move_simple.launch  SendToPose.launch  VelocityController_2_drones.launch  VelocityController_2_masses_bar_turn_and_move.launch  VelocityController_2_masses_turn_and_move.launch  VelocityController_V2_bar_turn_and_move.launch  VelocityController_bar_move.launch  VelocityController_bar_turn_and_move.launch  VelocityController_turn_and_move.launch  command_nodes.launch  land_2_drones.launch  start_apollo1.launch  takeoff_2_drones.launch
drone_controller/plot/: error_plot.py
drone_controller/src/: PathController.cpp  PositionController_2_drones.cpp  PositionController_bar_turn_and_move.cpp  PositionController_move.cpp  PositionController_turn.cpp  PositionController_turn_and_move.cpp  PositionController_turn_and_move_simple.cpp  VelocityController_2_drones.cpp  VelocityController_2_masses_turn_and_move.cpp  VelocityController_V2_bar_turn_and_move.cpp  VelocityController_bar_move.cpp  VelocityController_bar_turn_and_move.cpp  VelocityController_turn_and_move.cpp  apollo1.cpp  command_2_drones.cpp  land_2_drones.cpp  launch_script  takeoff_2_drones.cpp
f_package/: CMakeLists.txt  package.xml
f_package/launch/: PositionController_turn.launch
f_package/src/: PositionController_move.cpp  PositionController_turn.cpp
node_topic_devel/: CMakeLists.txt  package.xml
node_topic_devel/msg/: person_data.msg
node_topic_devel/src/: publisher_node.cpp  subscriber_node.cpp
scrum/: scrum_week_3_day_5.md  scrum_week_4_day_1.md  scrum_week_4_day_2.md  scrum_week_4_day_4.md  scrum_week_5_day_1.md  scrum_week_5_day_2.md  scrum_week_5_day_4.md  template_weekly_scrum.md
trajectory_controller/: CMakeLists.txt  package.xml
trajectory_controller/src/: trajectory_creator.cpp
